--- a/styleX.css
+++ b/styleX.css
@@ -113,6 +113,10 @@ li a {
   padding-top: 102px;
 }
 */
+sup {
+    vertical-align: super;
+    font-size: 18px;
+}
 
 .valueProposition p {
   line-height: 50px;
@@ -152,6 +156,24 @@ li a {
   z-index: 2;
   margin-top: 20px;
   padding-top: 60px;
+}
+
+.Alleinstellungsmerkmale{
+  line-height: 35px;
+  font-family: 'Open Sans';
+  padding: 0.5px 0px 0.5px 10px;
+  margin-top: 180px;
+  margin-bottom: 0px;
+  margin-right: 30px;
+  margin-left: 630px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 850px;
+  height: 300px;
+  color: black;
+  font-size: 20px;
+  text-align: inherit;
 }
 
 .Was_bedeutet_Regional_für_Fresa {
@@ -447,7 +469,6 @@ position: relative;
   text-align: inherit;
 }
 
-/*
 .Was_ist_Fresa{
   line-height: 35px;
   font-family: 'Open Sans';
@@ -480,15 +501,6 @@ position: relative;
   z-index:3;
 }
 
-.overlay4 {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  opacity: 0.8;
-  top: 0;
-}
-
 .Materialstudie_image {
   font-size: 25px;
   margin-top: 80px;
@@ -503,6 +515,16 @@ position: relative;
   height: 650px;
   background-position: center;
   position: relative;
+}
+
+
+.overlay5 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.5;
+  top: 0;
 }
 
 .Materialstudie{
@@ -577,15 +599,13 @@ position: relative;
   z-index:3;
 }
 
-Führt zu einem Zeilenumbruch, sodass Name und Mail in verschiedenen Zeilen sind.*/
-
-/*div {
+/*Führt zu einem Zeilenumbruch, sodass Name und Mail in verschiedenen Zeilen sind.*/
+div {
     word-wrap: break-word;
 }
 
- macht die Teambilder in eine Reihe*/
-
-/*.column {
+/* macht die Teambilder in eine Reihe*/
+.column {
   float: left;
   width: 22%;
   padding: 10px;
@@ -593,11 +613,13 @@ Führt zu einem Zeilenumbruch, sodass Name und Mail in verschiedenen Zeilen sind
   margin-top: 70px;
 }
 
- Clear floats after image containers
+/* Clear floats after image containers */
 .row::after {
   content: "";
   clear: both;
   display: table;
 }
 
-/*
+;
+  display: table;
+}
