--- a/styleX.css
+++ b/styleX.css
@@ -13,7 +13,7 @@ and (min-width : 1224px) {
 }*/
 
 body {
-  background-color: #fcfdff;
+  background-color: #FFFFFF;
   font-family: 'Open Sans';
   margin: 0;
   padding: 0;
@@ -27,6 +27,12 @@ nav {
   z-index: 99999;
   background-color: #fff;
   width: 100%;
+  opacity: 1;
+  box-shadow: 2px 3px;
+}
+
+.navopacity {
+  opacity: 0.8;
 }
 
 .title {
@@ -36,6 +42,7 @@ nav {
   color: #9BA63C;
   font-family: "Open Sans";
   font-size: 28px;
+  margin-top: 20px;
   margin-bottom: 0px;
   margin-right: 0px;
   margin-left: 30px;
@@ -51,9 +58,9 @@ nav {
   font-size: 100px;
   margin-bottom: 0px;
   margin-right: 0px;
-  zzbackground-image: url("./Pics/DSC_2649.jpg");
-  zzbackground-size: cover;
-  zzbackground-repeat: no-repeat;
+  background-image: url("./Pics/DSC_2649.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   width: 100%;
   display: block;
   height: 650px;
@@ -69,11 +76,12 @@ nav {
   background-color: black;
   opacity: 0.6;
   top: 0;
+
 }
 
 .SFD {
   font-size: 70px;
-  color: #CB7458;
+  color: #FFFFFF;
   font-family: 'Amatic SC';
   position: absolute;
   top: 40%;
@@ -88,12 +96,14 @@ nav {
   padding: 0px 15px 0px 15px;
   font-weight: bold;
   color: #1f3f00;
+  background-color: inherit;
+
 }
 
 .menu {
   font-size: 16px;
   padding: -40px 5px 5px 5px;
-  margin-top: 0px;
+  margin-top: 50px;
   margin-bottom: 0px;
   margin-right: 3%;
   margin-left: 0px;
@@ -102,6 +112,8 @@ nav {
   display: flex;
   justify-content: flex-end;
   width: 100%;
+  background-color: inherit;
+
 }
 
 li {
@@ -113,7 +125,7 @@ li a {
   text-decoration: none;
   display: block;
   padding: -40px 20px 5px 20px;
-  background-color: #fcfdff;
+  background-color: inherit;
 }
 
 .menu>li>a {
@@ -246,8 +258,10 @@ sup {
   color: #CB7458;
   position: relative;
   z-index: 2;
-  margin-top: 80px;
+  margin-top: 100px;
+  margin-bottom: 80px;
   padding-top: 60px;
+
 }
 
 .Verbraucher_image {
@@ -278,7 +292,8 @@ sup {
   position: relative;
   z-index: 2;
   margin-top: 100px;
-  padding-top: 60px;
+  padding-top: -40px;
+  margin-bottom: 80px;
 }
 
 .VertrauenText {
@@ -343,34 +358,26 @@ sup {
   color: #9BA63C;
   position: relative;
   z-index: 2;
-  margin-top: 80px;
-  padding-top: 60px;
+  margin-top: 40px;
+  padding-top: 70px;
+  margin-right: 0%;
+  margin-left: 0%;
 }
 
-.Kapitelpunkte {
-  font-family: 'Open Sans';
-  font-size: 40px;
-  color: #CB7458;
-  margin-bottom: 0px;
-  margin-right: 150px;
-  margin-left: 150px;
-  margin-top: -60px;
-}
 
-.Fresa-Konzept_image {
+.FresaKonzept_image {
   font-size: 25px;
-  margin-top: -245px;
-  margin-bottom: 0px;
-  margin-right: 0px;
-  margin-left: 665px;
   background-image: url("./Pics/mal.png");
   background-size: cover;
   background-repeat: no-repeat;
-  width: 35%;
-  display: block;
-  height: 400px;
+  width: 25%;
+  height: 200px;
   background-position: center;
   position: relative;
+  float: right;
+  margin-right: 12%;
+  margin-top: 5%;
+  padding: 0px 0px 0px 0px;
 }
 
 .Fresa-Konzept {
@@ -378,8 +385,8 @@ sup {
   font-family: 'Open Sans';
   padding: 0px 0px 0px 0px;
   margin-bottom: 0px;
-  margin-right: 550px;
-  margin-left: 150px;
+  margin-right: 350px;
+  margin-left: 80px;
   margin-top: 0px;
   text-decoration: none;
   position: relative;
@@ -387,11 +394,128 @@ sup {
   font-size: 20px;
 }
 
+.Kapitelpunkte {
+  font-family: 'Open Sans';
+  font-size: 40px;
+  color: #CB7458;
+  margin-bottom: 5px;
+  margin-right: 150px;
+  margin-left: 245px;
+  margin-top: 80px;
+}
+
+.FresaMikrodepot {
+  font-family: 'Open Sans';
+  font-size: 40px;
+  color: #CB7458;
+  margin-bottom: 5px;
+  margin-right: 0px;
+  margin-left: 500px;
+  margin-top: -70px;
+}
+
+.FresaMikrodepot_image {
+  font-size: 25px;
+  background-image: url("./Pics/FresaMikrodepot.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 25%;
+  height: 200px;
+  background-position: center;
+  position: relative;
+  float: left;
+  margin-left: 12%;
+  margin-top: -5%;
+  padding: 0px 0px 0px 0px;
+}
+
+.Fresa-Mikrodepot {
+  line-height: 35px;
+  font-family: 'Open Sans';
+  padding: 0px 0px 0px 0px;
+  margin-bottom: 0px;
+  margin-right: 0px;
+  margin-left: 310px;
+  margin-top: 0px;
+  text-decoration: none;
+  position: relative;
+  color: black;
+  font-size: 20px;
+}
+
+.Fresa-Vermarktungsprinzip {
+  line-height: 35px;
+  font-family: 'Open Sans';
+  color: black;
+  font-size: 20px;
+  text-align: inherit;
+  margin-top: 5px;
+  margin-left: -130px;
+  margin-bottom: 5px;
+
+}
+
+.Vermarktungsprinzip {
+  font-family: 'Open Sans';
+  font-size: 40px;
+  color: #CB7458;
+  margin-bottom: 5px;
+  margin-right: 0px;
+  margin-left: 122px;
+  margin-top: -40px;
+}
+
+.Fresa-KrummesGemüse {
+  line-height: 35px;
+  font-family: 'Open Sans';
+  color: black;
+  font-size: 20px;
+  text-align: inherit;
+  margin-top: 5px;
+  margin-left: -8px;
+  margin-bottom: 5px;
+
+}
+
+.KrummesGemüse {
+  font-family: 'Open Sans';
+  font-size: 40px;
+  color: #CB7458;
+  margin-bottom: 5px;
+  margin-right: 150px;
+  margin-left: 245px;
+  margin-top: -90px;
+}
+
+.Fresa-WasGibtEsInDerRegion {
+  line-height: 35px;
+  font-family: 'Open Sans';
+  color: black;
+  font-size: 20px;
+  text-align: inherit;
+  margin-top: 5px;
+  margin-left: -8px;
+  margin-bottom: 5px;
+
+}
+
+.WasGibtEsInDerRegion {
+  font-family: 'Open Sans';
+  font-size: 40px;
+  color: #CB7458;
+  margin-bottom: 5px;
+  margin-right: 150px;
+  margin-left: 245px;
+  margin-top: -90px;
+}
+
+
 .Tine {
   font-size: 65px;
   font-family: 'Amatic SC';
   color: #CB7458;
   text-align: center;
+  margin-bottom: 80px;
 }
 
 .tineText {
@@ -399,52 +523,30 @@ sup {
   font-family: 'Open Sans';
   font-size: 20px;
   text-align: inherit;
+  margin-bottom: -40px;
 }
 
-.Was_ist_Fresa {
-  line-height: 35px;
-  font-family: 'Open Sans';
-  padding: 0px 0px 0px 0px;
-  margin-bottom: 0px;
-  margin-right: 150px;
-  margin-left: 150px;
-  margin-top: 60px;
-  text-decoration: none;
+.Unsere_Materialien {
+  color: white;
   position: relative;
-  color: black;
-  font-size: 20px;
-  text-align: center;
   z-index: 3;
-}
-
-.Bestandteile {
-  line-height: 35px;
-  font-family: 'Open Sans';
-  padding: 0px 0px 0px 0px;
-  margin-bottom: 0px;
-  margin-right: 150px;
-  margin-left: 150px;
-  margin-top: 60px;
-  text-decoration: none;
-  position: relative;
-  color: black;
-  font-size: 20px;
-  text-align: center;
-  z-index: 3;
+  margin-top: 20px;
+  padding-top: 60px;
 }
 
 .Materialstudie_image {
   font-size: 25px;
-  margin-top: 80px;
+  margin-top: 200px;
   margin-bottom: 0px;
   margin-right: 0px;
   margin-left: 0px;
+  padding-bottom: 50px;
   background-image: url("./Pics/material.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
   display: block;
-  height: 650px;
+  height: auto;
   background-position: center;
   position: relative;
 }
@@ -458,9 +560,14 @@ sup {
   top: 0;
 }
 
-.Materialstudie {
+.Materialien {
   line-height: 35px;
   font-family: 'Open Sans';
+  padding: 0px 0px 0px 0px;
+  margin-bottom: 0px;
+  margin-right: 150px;
+  margin-left: 150px;
+  margin-top: 60px;
   text-decoration: none;
   position: relative;
   color: white;
@@ -469,39 +576,202 @@ sup {
   z-index: 3;
 }
 
-.Preise {
-  line-height: 35px;
-  font-family: 'Open Sans';
-  text-decoration: none;
+.Material_image1 {
+  font-size: 25px;
+  background-image: url("./Pics/VerbraucherMarkt.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 35%;
+  max-width: 400px;
+  display: block;
+  height: 300px;
+  background-position: center;
   position: relative;
-  color: black;
-  font-size: 20px;
-  text-align: center;
-  z-index: 3;
+  float: left;
+  margin-left: 15%;
+  margin-top: 200px;
+}
+
+.Material_image2 {
+  font-size: 25px;
+  background-image: url("./Pics/VerbraucherMarkt.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 35%;
+  max-width: 400px;
+  display: block;
+  height: 300px;
+  background-position: center;
+  position: relative;
+  float: right;
+  margin-right: 15%;
+  margin-top: 200px;
+}
+
+.Pricing {
+  color: #9BA63C;
+  position: relative;
+  z-index: 2;
+  margin-top: 550px;
+  padding-top: -40px;
+  margin-bottom: 0px;
+}
+
+.Pricing_image {
+  font-size: 25px;
+  background-image: url("./Pics/VerbraucherMarkt.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 800px;
+  display: block;
+  height: 700px;
+  background-position: center;
+  position: relative;
+  float: right;
+  margin-right: 20%;
+  margin-top: 80px;
 }
 
 .Technik {
+  color: white;
+  position: relative;
+  z-index: 3;
+  margin-top: 20px;
+  padding-top: 60px;
+}
+
+.Technik_image {
+  font-size: 25px;
+  margin-top: 1000px;
+  margin-bottom: 0px;
+  margin-right: 0px;
+  margin-left: 0px;
+  padding-bottom: 50px;
+  background-image: url("./Pics/Technik.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  display: block;
+  height: auto;
+  background-position: center;
+  position: relative;
+}
+
+.overlay6 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.5;
+  top: 0;
+}
+
+.SoFunktionierts{
   line-height: 35px;
   font-family: 'Open Sans';
   padding: 0px 0px 0px 0px;
   margin-bottom: 0px;
   margin-right: 150px;
   margin-left: 150px;
-  margin-top: 100px;
+  margin-top: 0px;
   text-decoration: none;
   position: relative;
-  color: black;
+  color: white;
   font-size: 20px;
   text-align: center;
   z-index: 3;
 }
 
-.technikVideo {
+.WorksLike {
+  color: #9BA63C;
+  position: relative;
+  z-index: 2;
+  margin-top: 150px;
+  padding-top: -40px;
+  margin-bottom: 0px;
+}
+
+.TechnikVideo {
   text-align: center;
   margin-top: 100px;
   margin-bottom: 200px;
   margin-right: 0px;
   margin-left: 0px;
+}
+
+.Looks_like {
+  color: #9BA63C;
+  position: relative;
+  z-index: 2;
+  margin-top: 0px;
+  padding-top: -40px;
+  margin-bottom: 80px;
+}
+
+.LooksLike {
+  line-height: 35px;
+  font-family: 'Open Sans';
+  color: black;
+  font-size: 20px;
+  text-align: inherit;
+}
+
+.Lookslike_image1 {
+  font-size: 25px;
+  background-image: url("./Pics/VerbraucherMarkt.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 25%;
+  display: block;
+  height: 250px;
+  background-position: center;
+  position: relative;
+  float: left;
+  margin-left: 10%;
+  margin-top: 100px;
+}
+
+.Lookslike_image2 {
+  font-size: 25px;
+  background-image: url("./Pics/VerbraucherMarkt.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 25%;
+  display: block;
+  height: 250px;
+  background-position: center;
+  position: relative;
+  float: right;
+  margin-right: 38%;
+  margin-top: 100px;
+}
+
+.Lookslike_image3 {
+  font-size: 25px;
+  background-image: url("./Pics/VerbraucherMarkt.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 25%;
+  display: block;
+  height: 250px;
+  background-position: center;
+  position: relative;
+  float: right;
+  margin-right: 11%;
+  margin-top: -250px;
+}
+
+.Team {
+  color: #9BA63C;
+  position: relative;
+  z-index: 2;
+  margin-top: 550px;
+  padding-top: -40px;
+  margin-bottom: 80px;
+}
+
+.row {
+    margin-top: -40px;
 }
 
 .Kontakt {
@@ -515,7 +785,7 @@ sup {
   text-decoration: none;
   position: relative;
   color: black;
-  font-size: 10px;
+  font-size: 9px;
   text-align: center;
   z-index: 3;
 }
@@ -565,4 +835,26 @@ div {
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
   .text {font-size: 11px}
+}
+
+.ZitateQuellen {
+  color: #9BA63C;
+  position: relative;
+  z-index: 2;
+  margin-top: 200px;
+  padding-top: 0px;
+  margin-bottom: 80px;
+}
+
+.Zitate-Quellen {
+  line-break: strict;
+  line-height: 25px;
+  font-family: 'Open Sans';
+  color: black;
+  font-size: 15px;
+  text-align: inherit;
+  margin-left: 245px;
+  margin-right: 300px;
+  margin-top: -20px;
+
 }
