--- a/style.css
+++ b/style.css
@@ -31,6 +31,15 @@ nav {
   box-shadow: 2px 3px;
 }
 
+video {
+  width: 100%;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+}
+
 .navopacity {
   opacity: 0.8;
 }
@@ -58,6 +67,11 @@ nav {
   margin: 0
 }
 
+.content {
+  width: 75%;
+  margin: 0 auto;
+}
+
 .intro_image {
   font-size: 100px;
   margin-bottom: 0px;
@@ -67,7 +81,7 @@ nav {
   background-repeat: no-repeat;
   width: 100%;
   display: block;
-  height: 650px;
+  height: 90vh;
   background-position: center;
   position: relative;
   padding-top: 100px;
@@ -78,9 +92,9 @@ nav {
   width: 100%;
   height: 100%;
   background-color: black;
-  opacity: 0.6;
+  opacity: 0.4;
   top: 0;
-
+  z-index: 3;
 }
 
 .SFD {
@@ -88,12 +102,12 @@ nav {
   color: #FFFFFF;
   font-family: 'Amatic SC';
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-decoration: none;
-  text-shadow: 10px;
+  text-align: center;
   font-weight: bold;
+  z-index: 99;
 }
 
 .menu>li {
@@ -101,7 +115,6 @@ nav {
   font-weight: bold;
   color: #1f3f00;
   background-color: inherit;
-
 }
 
 .menu {
@@ -117,7 +130,6 @@ nav {
   justify-content: flex-end;
   width: 100%;
   background-color: inherit;
-
 }
 
 li {
@@ -148,13 +160,20 @@ sup {
   margin: 50px 0;
 }
 
+.white {
+  color: #fff;
+}
+
 .section p {
   margin: 0 auto;
-  width: 60%;
+  width: 90%;
+  line-height: 1.7;
+  font-size: 16px;
 }
 
 .valueProposition p {
-  line-height: 50px;
+  line-height: 1.7;
+  font-size: 19px;
   font-family: "Open Sans";
   margin: 0 auto;
   width: 70%;
@@ -171,7 +190,7 @@ sup {
   margin-left: 0px;
 }
 
-.Kapitelüberschrift {
+.heading {
   font-size: 65px;
   font-family: 'Amatic SC';
   color: #CB7458;
@@ -186,6 +205,22 @@ sup {
   z-index: 2;
   margin-top: 20px;
   padding-top: 60px;
+}
+
+.usp {
+  display: flex;
+}
+
+.usp.block {
+  width: 25%;
+  height: auto;
+}
+
+.usp .block .feat-img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  overflow: hidden;
 }
 
 .Alleinstellungsmerkmale p {
@@ -243,9 +278,18 @@ sup {
   z-index: 3;
 }
 
-+}
+#slideshow {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+#slideshow>img {
+  position: absolute;
+}
 
 /* Fading animation */
+
 .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
@@ -254,18 +298,29 @@ sup {
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+  from {
+    opacity: 0
+  }
+  to {
+    opacity: 1
+  }
 }
 
 @keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+  from {
+    opacity: 0
+  }
+  to {
+    opacity: 1
+  }
 }
 
 /* On smaller screens, decrease text size */
+
 @media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
+  .text {
+    font-size: 11px
+  }
 }
 
 .Verbraucher {
@@ -275,7 +330,6 @@ sup {
   margin-top: 100px;
   margin-bottom: 80px;
   padding-top: 60px;
-
 }
 
 .Verbraucher_image {
@@ -375,20 +429,12 @@ sup {
   margin-left: 0%;
 }
 
+.part-block {
+  display: flex;
+}
 
-.FresaKonzept_image {
-  font-size: 25px;
-  background-image: url("./Pics/mal.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 25%;
-  height: 200px;
-  background-position: center;
-  position: relative;
-  float: right;
-  margin-right: 12%;
-  margin-top: 5%;
-  padding: 0px 0px 0px 0px;
+.part {
+  width: 50%;
 }
 
 .Fresa-Konzept {
@@ -405,14 +451,10 @@ sup {
   font-size: 20px;
 }
 
-.Kapitelpunkte {
+.part-title {
   font-family: 'Open Sans';
   font-size: 40px;
   color: #CB7458;
-  margin-bottom: 5px;
-  margin-right: 150px;
-  margin-left: 245px;
-  margin-top: 80px;
 }
 
 .FresaMikrodepot {
@@ -463,7 +505,6 @@ sup {
   margin-top: 5px;
   margin-left: -130px;
   margin-bottom: 5px;
-
 }
 
 .Vermarktungsprinzip {
@@ -485,7 +526,6 @@ sup {
   margin-top: 5px;
   margin-left: -8px;
   margin-bottom: 5px;
-
 }
 
 .KrummesGemüse {
@@ -507,7 +547,6 @@ sup {
   margin-top: 5px;
   margin-left: -8px;
   margin-bottom: 5px;
-
 }
 
 .WasGibtEsInDerRegion {
@@ -519,7 +558,6 @@ sup {
   margin-left: 245px;
   margin-top: -90px;
 }
-
 
 .Tine {
   font-size: 65px;
@@ -675,15 +713,9 @@ sup {
   top: 0;
 }
 
-.SoFunktionierts{
+.SoFunktionierts {
   line-height: 35px;
   font-family: 'Open Sans';
-  padding: 0px 0px 0px 0px;
-  margin-bottom: 0px;
-  margin-right: 150px;
-  margin-left: 150px;
-  margin-top: 0px;
-  text-decoration: none;
   position: relative;
   color: white;
   text-align: center;
@@ -778,7 +810,7 @@ sup {
 }
 
 .row {
-    margin-top: -40px;
+  margin-top: -40px;
 }
 
 .Kontakt {
@@ -809,7 +841,7 @@ div {
   float: left;
   width: 22%;
   padding: 10px;
-  align: center;
+  /* align: center; */
   margin-top: 70px;
 }
 
@@ -822,6 +854,7 @@ div {
 }
 
 /* Fading animation */
+
 .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
@@ -830,18 +863,29 @@ div {
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+  from {
+    opacity: .4
+  }
+  to {
+    opacity: 1
+  }
 }
 
 @keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+  from {
+    opacity: .4
+  }
+  to {
+    opacity: 1
+  }
 }
 
 /* On smaller screens, decrease text size */
+
 @media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
+  .text {
+    font-size: 11px
+  }
 }
 
 .ZitateQuellen {
@@ -863,9 +907,8 @@ div {
   margin-left: 245px;
   margin-right: 300px;
   margin-top: -20px;
-
 }
 
-p{
-  size:12px;
+p {
+  size: 12px;
 }
