--- a/style.css
+++ b/style.css
@@ -193,11 +193,25 @@ sup {
   width: 90%;
   line-height: 1.7;
   font-size: 16px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.section.contact p {
+  width: 100%;
+  font-size: 14px;
+  text-align: center;
+}
+
+.section.contact h3 {
+  width: 100%;
+  text-align: center;
 }
 
 .section iframe {
   width: 100%;
-  height: 500px
+  height: 500px;
+  background-color: #d5d5d5
 }
 
 .price-gen {
@@ -310,15 +324,15 @@ sup {
 }
 
 .usp .block {
-  width: 100%;
   height: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .usp .block .feat-img {
   width: 180px;
   height: 180px;
   overflow: hidden;
-  margin: 0 auto;
   margin-bottom: 20px;
 }
 
@@ -341,6 +355,8 @@ sup {
 
 .row {
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .material img {
@@ -969,11 +985,12 @@ div {
 /* macht die Teambilder in eine Reihe*/
 
 .column {
-  float: left;
-  width: 22%;
+  width: 100%;
   padding: 10px;
-  /* align: center; */
-  margin-top: 70px;
+}
+
+.section.contact .column {
+  max-width: 200px;
 }
 
 /* Clear floats after image containers */
