--- a/style.css
+++ b/style.css
@@ -817,7 +817,7 @@ sup {
 
 .Pricing_image {
   font-size: 25px;
-  background-image: url("./Pics/VerbraucherMarkt.jpg");
+  background-image: url("./Pics/comp/aubergines-bio-cabbage.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   width: 800px;
