--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ a {
 
 .title {
   float: left;
-  width: 400px;
+  width: 200px;
   font-weight: bold;
   color: #9BA63C;
   font-family: "Open Sans";
@@ -186,6 +186,8 @@ sup {
   left: 50%;
   transform: translateX(-50%);
   position: relative;
+  width: 80%;
+  margin-top: 32px;
 }
 
 .section p {
@@ -212,6 +214,10 @@ sup {
   width: 100%;
   height: 500px;
   background-color: #d5d5d5
+}
+
+.section.sub {
+  width: 33%;
 }
 
 .price-gen {
@@ -287,6 +293,10 @@ sup {
   margin-bottom: 40px;
 }
 
+.heading.green {
+  color: #9BA63C;
+}
+
 .heading.continue {
   font-size: 50px;
   color: #9BA63C;
@@ -327,13 +337,15 @@ sup {
   height: auto;
   display: flex;
   flex-direction: column;
+  width: 33%;
+  align-items: center;
 }
 
 .usp .block .feat-img {
   width: 180px;
-  height: 180px;
+  height: 140px;
   overflow: hidden;
-  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .usp .block .feat-img img {
@@ -350,6 +362,44 @@ sup {
 }
 
 .usp .block p {
+  text-align: center;
+}
+
+.tech {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.tech .block {
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  align-items: center;
+}
+
+.tech .block .feat-img {
+  width: 180px;
+  height: 180px;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+.tech .block .feat-img img {
+  top: 50%;
+  position: relative;
+  transform: translateY(-50%);
+}
+
+.tech .block p.tech-title {
+  font-weight: 700;
+  color: #1f3f00;
+  font-size: 19px;
+  margin-bottom: 8px
+}
+
+.tech .block p {
   text-align: center;
 }
 
@@ -537,7 +587,7 @@ sup {
 }
 
 .sectionHeader.unternehmen {
-  background-image: url("./Pics/brainstorming.jpg");
+  background-image: url("./Pics/markt.jpg");
 }
 
 .sectionHeader.bio {
@@ -545,7 +595,15 @@ sup {
 }
 
 .sectionHeader.produkt {
-  background-image: url("./Pics/material.jpg");
+  background-image: url("./Pics/kiste.jpg");
+}
+
+.sectionHeader.pricing {
+  background-image: url("./Pics/pricing_head.jpg");
+}
+
+.sectionHeader.contact {
+  background-image: url("./Pics/team.jpg");
 }
 
 .overlay4 {
@@ -591,6 +649,10 @@ sup {
   height: 100%;
 }
 
+img.part {
+  margin: 0 8px;
+}
+
 .Fresa-Konzept {
   line-height: 35px;
   font-family: 'Open Sans';
@@ -609,6 +671,7 @@ sup {
   font-family: 'Amatic SC';
   font-size: 50px;
   color: #CB7458;
+  margin-top: 0
 }
 
 .FresaMikrodepot {
